adding response util, delete endpoint
